security: harden authentication and authorization
- JWT validation with HS256 secret from environment
- CORS configured with explicit allowed headers (no wildcards)
- Security headers: X-Frame-Options, X-Content-Type-Options, Referrer-Policy
- Exception messages not exposed to clients
- H2 console disabled in production profile
- JWT_SECRET and ALLOWED_ORIGINS required in production

Addresses findings from SECURITY_REVIEW.md